unpackaged/main/default/objects/Audit_Log__c/Audit_Log__c.object-meta.xml
<CustomObject>
    <label>Audit Log</label>
    <nameField>
        <displayFormat>AL-{0000000000}</displayFormat>
        <label>Audit Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>