unpackaged/main/default/objects/Audit_Log__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Audit Logs</relationshipLabel>
    <relationshipName>Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>