unpackaged/main/default/objects/Audit_Log__c/fields/Service_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Service_Line_Items__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service Line Item</label>
    <referenceTo>FSL_Service_Line_Item__c</referenceTo>
    <relationshipLabel>Audit Logs</relationshipLabel>
    <relationshipName>Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>